#the data (png files, pixmaps, resource file..) associated with the program 

pkgdata_DATA =  ipdf.rc 			\
                pincode_lock_background.png	\
                transparent.png			\
                Btn_100_27_selected.png		\
                Btn_100_27_grey.png		\
                Bar_707_347_black.png

EXTRA_DIST   = $(pkgdata_DATA)
